2003-03-22  Alan Modra  <amodra@bigpond.net.au>

	* combine.c (simplify_comparison <AND>): Use gen_int_mode.  Tidy.

2003-03-18  Jakub Jelinek  <jakub@redhat.com>

	* config/s390/s390.c (s390_output_dwarf_dtprel): New.
	* config/s390/s390-protos.h (s390_output_dwarf_dtprel): New proto.
	* config/s390/s390.h (ASM_OUTPUT_DWARF_DTPREL): Define.

	* config/ia64/ia64.c (ia64_output_dwarf_dtprel): New.
	* config/ia64/ia64-protos.h (ia64_output_dwarf_dtprel): New proto.
	* config/ia64/ia64.h (ASM_OUTPUT_DWARF_DTPREL): Define.

2003-05-16  Jakub Jelinek  <jakub@redhat.com>

	* config/ia64/unwind-ia64.c (uw_update_reg_address): Handle
	.save XX, r0.

2001-10-31  Jakub Jelinek  <jakub@redhat.com>

	* unwind-dw2-fde.c (fde_merge): Choose just one from FDEs for the
	same function in erratic array.

2002-07-11  Jakub Jelinek  <jakub@redhat.com>

	PR debug/7241
	* dwarf2out.c (base_type_die): Use DW_ATE_*_char even if main
	variant is char_type_node and type name is char.

2003-02-04  Jakub Jelinek  <jakub@redhat.com>

	* dwarf2out.c (dwarf2out_finish): Add AT_comp_dir
	attribute even if input file name is absolute, but one of the
	includes is relative.

2001-10-12  Jakub Jelinek  <jakub@redhat.com>

	* unwind-dw2.c (frame_state_296): New type.
	(__frame_state_for): Add compatibility code with early gcc-2.96-RH.

2003-05-15  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>

	* doc/invoke.texi (Warning Options): Mark -Wmissing-declarations
	as a C only option.

2003-05-15  Wolfgang Bangerth <bangerth@dealii.org>

	* doc/bugreport.texi: Remove most of the bug reporting
	instructions and merge them into bugs.html.

2003-05-14  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	* sparc.c (print_operand): Fix uninitialized warning.

2003-05-14  Mark Mitchell  <mark@codesourcery.com>

	* version.c: Reset to prerelease format.
	* doc/include/gcc-common.texi: Update version number.

2003-05-13  Release Manager

	* GCC 3.3 Released.

2003-05-13  Release Manager

	* GCC 3.3 Released.
